tests/e2e/awx/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: awx-fixture
  labels:
    app.kubernetes.io/part-of: lazarus-e2e
